# ShadowOps

./: CMakeLists.txt  LICENSE  README.md  ShadowOps.cpp  build.bat  build.ps1  shadowops.conf
